--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,1 +1,8 @@
 javarush.user.secretkey=67cec16b-b8e4-473b-b902-02d6d6f8c105
+
+
+67cec16b-b8e4-473b-b902-02d6d6f8c105
+
+
+
+Forum - ce3022f8aa8c33257888567595ef8518
